Fixed more Javadoc warnings